Show ancestors and descendants for a motion on its display page.

--- a/app/views/motions/_motions.html.erb
+++ b/app/views/motions/_motions.html.erb
@@ -1,6 +1,7 @@
 <% committee ||= false %>
 <% period  ||= false %>
-<table id="motions">
+<% id ||= "motions" %>
+<table id="<%= id %>">
   <thead>
   <tr>
     <%=content_tag( :th, "Committee" ) unless committee %>
