Add basic public listings for motions and meetings.

--- a/app/views/meetings/_meetings.html.erb
+++ b/app/views/meetings/_meetings.html.erb
@@ -12,7 +12,7 @@
   </tr>
   </thead>
   <tbody>
-<%= render partial: "meeting", collection: meetings,
+<%= render partial: "meetings/meeting", collection: meetings,
   locals: { committee: committee } %>
   </tbody>
 </table>
