--- a/app/views/meetings/_meeting.html.erb
+++ b/app/views/meetings/_meeting.html.erb
@@ -6,7 +6,7 @@
     <td><%= meeting.starts_at.to_formatted_s :short_year %></td>
     <td><%= meeting.ends_at.to_formatted_s :short_year %></td>
     <td><%= meeting.location %></td>
-    <td><%= link_to 'Show', meeting %></td>
+    <td><%= link_to( 'Show', meeting ) if permitted_to? :show, meeting %></td>
     <td><%= link_to( 'Edit', edit_meeting_path(meeting) ) if permitted_to? :edit, meeting %></td>
     <td><%= link_to( 'Destroy', meeting, data: { confirm: 'Are you sure?' }, method: :delete ) if permitted_to? :destroy, meeting %></td>
   <% end %>
