Permit attachments to be associated with events in a motion's timeline.

--- a/app/views/motion_events/_motion_event.html.erb
+++ b/app/views/motion_events/_motion_event.html.erb
@@ -6,5 +6,6 @@
   <td><%= motion_event.occurrence %></td>
   <td><%= motion_event.event %></td>
   <td><%= motion_event.description %></td>
+  <%=content_tag :td, render( partial: 'attachments/attachments', object: motion_event.attachments ) %>
 </tr>
 
