--- a/app/views/motions/_motion_event_fields.html.erb
+++ b/app/views/motions/_motion_event_fields.html.erb
@@ -1,20 +1,25 @@
-<% if permitted_to? :staff, f.object.motion.committee %>
-  <% if f.object.new_record? %>
-    <%= f.input :event,
-      label: 'Event type',
-      hint: 'What type of event should be recorded?' %>
+<% nested ||= false %>
+<%=content_tag :div, class: 'nested-fields' do %>
+  <% if permitted_to? :staff, f.object.motion.committee %>
+    <% if f.object.new_record? %>
+      <%= f.input :event,
+        label: 'Event type',
+        hint: 'What type of event should be recorded?' %>
+    <% end %>
+  <% end %>
+  <% if permitted_to? :vicechair, f.object.motion.committee %>
+    <%= f.input :occurrence, as: :date_picker,
+      label: "Event date",
+      hint: 'What is the effective date for this action?' %>
+  <% else %>
+    <%= f.input :occurrence, as: :date_picker, disabled: true,
+      label: "Event date",
+      hint: "You may not alter the effective date for this action." %>
+  <% end %>
+  <%= f.input :description, as: :string, label: 'Event description',
+    hint: 'Any additional information about this action for the log.' %>
+  <%= cocoon_fields f, :attachments, insertable: true %>
+  <% if nested && permitted_to?( :destroy, f.object ) %>
+  <%=content_tag :p, link_to_remove_association( 'Remove Motion Event', f ) %>
   <% end %>
 <% end %>
-<% if permitted_to? :vicechair, f.object.motion.committee %>
-  <%= f.input :occurrence, as: :date_picker,
-    label: "Event date",
-    hint: 'What is the effective date for this action?' %>
-<% else %>
-  <%= f.input :occurrence, as: :date_picker, disabled: true,
-    label: "Event date",
-    hint: "You may not alter the effective date for this action." %>
-<% end %>
-<%= f.input :description, as: :string, label: 'Event description',
-  hint: 'Any additional information about this action for the log.' %>
-<%= cocoon_fields f, :attachments, insertable: true %>
-
