Initial porting to rails4 interface.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,12 +28,12 @@ fieldset.cocoon {
   }
 
   .links a {
-    @extend .button;
+/*    @extend .button; */
   }
 
   .nested-fields.ui-sortable {
     fieldset {
-      border-top: solid #777 12px;
+      border-top: solid #777 12px;  
       cursor: move;
     }
   }
