--- a/app/views/home/_motions.html.erb
+++ b/app/views/home/_motions.html.erb
@@ -4,7 +4,7 @@
   <%=content_tag :div, id: 'new-motions' do %>
     <%=content_tag :p, 'Start new motion' %>
     <%=content_tag :ul do %>
-      <% current_user.committees.sponsor.with_permissions_to(:vote).uniq.each do |committee| %>
+      <% current_user.committees.sponsor.with_permissions_to(:vote).distinct.each do |committee| %>
         <%=content_tag :li, link_to( committee.name, new_committee_motion_path( committee ) ) %>
       <% end %>
     <% end %>
