--- a/app/views/motions/refer.html.erb
+++ b/app/views/motions/refer.html.erb
@@ -6,7 +6,7 @@
   then work through that committee's normal business process.
 <% end %>
 
-<%= simple_form_for motion, as: :motion,
+<%= simple_form_for motion, wrapper: :horizontal_form, as: :motion,
   url: refer_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
  
