--- a/app/views/authorities/new.html.erb
+++ b/app/views/authorities/new.html.erb
@@ -1,6 +1,6 @@
 <%=content_tag :h1, "New authority" %>
 
-<%= simple_form_for(authority) do |f| %>
+<%= simple_form_for(authority, wrapper: :horizontal_form) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
 
