--- a/app/views/brands/new.html.erb
+++ b/app/views/brands/new.html.erb
@@ -1,6 +1,6 @@
 <%=content_tag :h1, "New brand" %>
 
-<%= simple_form_for(brand, html: { multipart: true } ) do |f| %>
+<%= simple_form_for(brand, wrapper: :horizontal_form, html: { multipart: true } ) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
 
