--- a/app/views/committees/edit.html.erb
+++ b/app/views/committees/edit.html.erb
@@ -1,6 +1,6 @@
 <%=content_tag :h1, "Edit committee #{committee.name}" %>
 
-<%= simple_form_for(committee) do |f| %>
+<%= simple_form_for(committee, wrapper: :horizontal_form) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
 
