--- a/app/views/committees/new.html.erb
+++ b/app/views/committees/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New committee</h1>
 
-<%= simple_form_for(committee) do |f| %>
+<%= simple_form_for(committee, wrapper: :horizontal_form) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
 
