--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing meeting of <%=h meeting.committee %></h1>
 
-<%= simple_form_for( meeting, html: { multipart: true } ) do |f| %>
+<%= simple_form_for( meeting, wrapper: :horizontal_form, html: { multipart: true } ) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
 
