--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,7 +1,8 @@
 <h1>New meeting for <%=h meeting.committee %></h1>
 
-<%= simple_form_for( meeting, :url => committee_meetings_path(meeting.committee),
-  :html => { :multipart => true } ) do |f| %>
+<%= simple_form_for( meeting, wrapper: :horizontal_form,
+  url: committee_meetings_path(meeting.committee),
+  html: { multipart: true } ) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
