--- a/app/views/membership_requests/new.html.erb
+++ b/app/views/membership_requests/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New membership request of <%=h membership_request.user.name %> for <%=h membership_request.committee %></h1>
 
-<%= simple_form_for( membership_request,
+<%= simple_form_for( membership_request, wrapper: :horizontal_form,
   url: polymorphic_path([ membership_request.committee, :membership_requests ]),
   html: { multipart: true } ) do |f| %>
   <%= render partial: 'form', object: f %>
