--- a/app/views/memberships/assign.html.erb
+++ b/app/views/memberships/assign.html.erb
@@ -1,9 +1,10 @@
 <h1>Assign membership</h1>
 
-<% form_tag assign_membership_path( membership ), method: :get %>
+<% form_tag assign_membership_path( membership ), class: "form-horizontal", method: :get %>
   <p>
     <%= label_tag 'user_name', 'User' %>
-    <%= text_field_with_auto_complete 'user_name', '', url: membership_users_url( membership ) %>
+    <%= text_field_with_auto_complete 'user_name', '',
+      url: membership_users_url( membership ) %>
   </p>
 <% end %>
 
