--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New membership for <%=h membership.position %></h1>
 
-<%= simple_form_for(membership, as: :membership,
+<%= simple_form_for(membership, wrapper: :horizontal_form, as: :membership,
   url: polymorphic_path( [ membership.context, :memberships ] ) ) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
