--- a/app/views/motion_comments/edit.html.erb
+++ b/app/views/motion_comments/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Editing comment for <%=h motion_comment.motion %></h1>
 
-<%= simple_form_for( motion_comment, html: { multipart: true } ) do |f| %>
+<%= simple_form_for( motion_comment, wrapper: :horizontal_form,
+  html: { multipart: true } ) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
 
