--- a/app/views/motions/adopt.html.erb
+++ b/app/views/motions/adopt.html.erb
@@ -4,7 +4,7 @@
   Use this form to record the adoption of the motion by the committee.
 <% end %>
 
-<%= simple_form_for motion, as: :motion,
+<%= simple_form_for motion, wrapper: :horizontal_form, as: :motion,
   url: adopt_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
   <%= form.simple_fields_for :motion_events,
