--- a/app/views/motions/amend.html.erb
+++ b/app/views/motions/amend.html.erb
@@ -8,7 +8,7 @@ If the amendment is adopted, it will supercede the original motion.
 Specify attachments only if they are to be substituted for or added to the original attachments.
 <% end %>
 
-<%= simple_form_for motion, as: :motion,
+<%= simple_form_for motion, wrapper: :horizontal_form, as: :motion,
   url: amend_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
   <%= form.simple_fields_for :motion_events,
