--- a/app/views/motions/implement.html.erb
+++ b/app/views/motions/implement.html.erb
@@ -5,7 +5,7 @@
   Implementation indicates no further followup is expected regarding the motion.
 <% end %>
 
-<%= simple_form_for motion, as: :motion,
+<%= simple_form_for motion, wrapper: :horizontal_form, as: :motion,
   url: implement_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
   <%= form.simple_fields_for :motion_events,
