--- a/app/views/motions/propose.html.erb
+++ b/app/views/motions/propose.html.erb
@@ -6,7 +6,7 @@
   The leadership of the committee will then be able to schedule it for meetings.
 <% end %>
 
-<%= simple_form_for motion, as: :motion,
+<%= simple_form_for motion, wrapper: :horizontal_form, as: :motion,
   url: propose_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
   <%= form.simple_fields_for :motion_events,
