--- a/app/views/positions/edit.html.erb
+++ b/app/views/positions/edit.html.erb
@@ -1,6 +1,6 @@
 <%=content_tag :h1, "Editing position #{position}" %>
 
-<%= simple_form_for position do |f| %>
+<%= simple_form_for( position, wrapper: :horizontal_form) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
 
