--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,6 @@
 <%=content_tag :h1, "New question"%>
 
-<%= simple_form_for(question) do |f| %>
+<%= simple_form_for(question, wrapper: :horizontal_form) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
 
